--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,33 @@ body {
 	background-color: #fff;
 }
 
-ul {
+ul,
+ol {
 	list-style-type: none;
-	padding: 0;
 	margin: 0;
+	padding-left: 0;
 }
 
-h3 {
-	margin: 0 auto;
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
 
-h4 {
-	margin: 0 auto;
+button {
+	cursor: pointer;
+	border: none;
+	border-radius: 4px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0;
 }
 
 .links {
@@ -178,7 +193,8 @@ p {
 	letter-spacing: 0.72px;
 	vertical-align: top;
 	text-align: center;
-	padding-bottom: 72px;
+	margin: 0;
+	margin-bottom: 72px;
 }
 
 .doing-list {
@@ -200,7 +216,8 @@ p {
 	letter-spacing: 0.72px;
 	vertical-align: top;
 	text-align: center;
-	padding-bottom: 72px;
+	margin: 0;
+	margin-bottom: 72px;
 }
 
 .team-section {
@@ -215,8 +232,7 @@ p {
 	letter-spacing: 0.4px;
 	vertical-align: top;
 	text-align: center;
-	padding-top: 32px;
-	padding-bottom: 8px;
+	margin-bottom: 8px;
 }
 .team-name-description {
 	color: #434455;
@@ -225,14 +241,17 @@ p {
 	letter-spacing: 0.32px;
 	vertical-align: top;
 	text-align: center;
-	padding-bottom: 32px;
+}
+
+.team {
+	margin-top: 32px;
+	margin-bottom: 32px;
 }
 
 .footer-background {
 	background-color: #2e2f42;
-	margin: 0 auto;
-	height: 312px;
-	padding-top: 101.5px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 .logo-footer {
@@ -251,8 +270,27 @@ p {
 	line-height: 24px;
 	letter-spacing: 0.32px;
 	text-align: left;
-	padding-top: 17.5px;
+	margin-top: 17px;
 	width: 264px;
+}
+
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
+.portfolio-button {
+	padding-bottom: 120px;
+	padding-top: 96px;
 }
 
 .filter-button {
@@ -260,8 +298,6 @@ p {
 	color: var(--company-color);
 	border: #e7e9fc;
 	cursor: pointer;
-	width: 114px;
-	height: 38px;
 	text-decoration: none;
 	font-weight: 500;
 	font-size: 16px;
@@ -270,6 +306,7 @@ p {
 	vertical-align: top;
 	text-align: center;
 	border-radius: 4px;
+	padding: 12px 24px;
 }
 .filter-button:hover,
 .filter-button:focus,
@@ -284,8 +321,7 @@ p {
 	letter-spacing: 0.4px;
 	vertical-align: top;
 	text-align: left;
-	padding-top: 32px;
-	padding-bottom: 8px;
+	margin-bottom: 8px;
 }
 .project-type {
 	color: #434455;
@@ -306,26 +342,21 @@ p {
 
 .menu {
 	display: flex;
-
 	justify-content: center;
 	gap: 24px;
-	padding-bottom: 72px;
-	padding-top: 96px;
+	margin-bottom: 72px;
 }
-.button-item {
-	justify-content: space-between;
-}
+
 .menu-set {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 24px;
-	margin: 0px;
-	padding-bottom: 120px;
+	gap: 48px 24px;
 }
+
 .bottom-frame {
-	padding-left: 16px;
+	padding: 32px 16px;
 	border: 1px solid #e7e9fc;
 	border-top: none;
 }
