--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,8 @@ p {
 	font-weight: 800;
 	line-height: 21px;
 	letter-spacing: 0.54px;
+	display: inline-block;
+	margin-bottom: 16px;
 }
 .footer-text {
 	color: var(--main-color);
@@ -270,7 +272,6 @@ p {
 	line-height: 24px;
 	letter-spacing: 0.32px;
 	text-align: left;
-	margin-top: 17px;
 	width: 264px;
 }
 
