--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ p {
 	letter-spacing: 0.54px;
 	vertical-align: top;
 	text-align: left;
+	margin-right: 76px;
 }
 
 .logo {
@@ -71,12 +72,16 @@ p {
 .nav-button {
 	display: flex;
 	align-items: center;
-
+text-decoration: none;
+list-style-type: none;
 	gap: 40px;
+	padding: 24px 0,
 }
 
 .nav-section {
 	margin-left: 76px;
+	display: flex;
+	align-items: center;
 }
 
 .link {
@@ -103,6 +108,7 @@ p {
 
 .address-section {
 	margin-left: auto;
+	display: flex;
 }
 .link-color {
 	color: #434455;
