--- a/css/styles.css
+++ b/css/styles.css
@@ -253,8 +253,12 @@ list-style-type: none;
 }
 
 .team {
-	margin-top: 32px;
-	margin-bottom: 32px;
+
+	padding: 32px 16px;
+}
+
+.mark{
+	border-radius: 0px 0px 4px 4px; 
 }
 
 .footer-background {
