--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,10 @@ list-style-type: none;
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
+.doing-section{
+	width: calc((100% - 48px) / 3);
+}
+
 .card-set {
 	display: flex;
 	gap: 24px;
@@ -254,7 +258,6 @@ list-style-type: none;
 }
 
 .team {
-
 	padding: 32px 16px;
 }
 
