--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ p {
 .flex-container {
 	display: flex;
 	align-items: center;
-	height: 72px;
+	
 }
 .logo-second-part {
 	font-family: raleway;
@@ -100,6 +100,7 @@ list-style-type: none;
 	letter-spacing: 0.32px;
 	vertical-align: top;
 	text-align: left;
+	padding: 24px 0;
 }
 .link:hover,
 .link:focus,
@@ -156,7 +157,8 @@ list-style-type: none;
 }
 
 .order-btn {
-display: inline-block;
+display: block;
+margin: 0 auto;
 	font-family: roboto;
 	background-color: var(--company-color);
 	border: var(--company-color);
