--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ list-style-type: none;
 	letter-spacing: 0.32px;
 	vertical-align: top;
 	text-align: left;
+	padding: 24px 0;
 	
 }
 .link:hover,
