new-section-list

--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ margin: 0 auto;
 	background-color: var(--company-color);
 	border: 1px solid transparent;
 }
-.new-section {
+.new-section-list {
 	font-size: 20px;
 	font-weight: 500;
 	line-height: 1.2;
